Kubernetes-Manifests-file/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris-staging-ingress

spec:
  ingressClassName: nginx

  rules:
  
    - host: tetris-staging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetris-service
                port:
                  number: 80
